--- a/public/auth.html
+++ b/public/auth.html
@@ -26,6 +26,8 @@ var config = {
       // FirebaseUI config.
       var uiConfig = {
         autoUpgradeAnonymousUsers: true,
+
+        //the user has sucessfully signed in so tell them to go to index
         signInSuccessUrl: 'index.html',
         signInOptions: [
           // Leave the lines as is for the providers you want to offer your users.
