--- a/public/d3/index.html
+++ b/public/d3/index.html
@@ -30,11 +30,35 @@
             <header class="wrapper clearfix">
                 <h1 class="title">Common</h1>
                 <nav>
-                    <ul>
-                        <li><a href="#">nav ul li a</a></li>
-                        <li><a href="#">nav ul li a</a></li>
-                        <li><a href="#">nav ul li a</a></li>
-                    </ul>
+
+
+                            <!-- Trigger/Open The Modal -->
+                            <button id="aboutBtn">About</button>
+                            <div id="aboutModal" class="modal">
+                              <!-- Modal content -->
+                              <div class="modal-content">
+                                <span class="close">&times;</span>
+                                <p>Common is a game for communities</p>
+                              </div>
+                            </div>
+
+
+                            <button id="joinBtn">Join</button>
+                            <div id="joinModal" class="modal">
+                              <div class="modal-content">
+                                <span class="close">&times;</span>
+                                <p>To join, please click here</p>
+                              </div>
+                            </div>
+
+                            <button id="settingsBtn">Settings</button>
+                            <div id="settingsModal" class="modal">
+                              <div class="modal-content">
+                                <span class="close">&times;</span>
+                                <p>Change your settings here</p>
+                              </div>
+                            </div>
+
                 </nav>
             </header>
         </div>
@@ -49,7 +73,7 @@
                     </header>
                     <section>
                         <h2>To play you must find an active player</h2>
-                        <p>Click here to find an active player</p>
+                        <p>Click <a href="https://twitter.com/hashtag/commonplay?src=hash " target="_blank">here</a> to find an active player</p>
                     </section>
 
                     <!--     <style>
