--- a/public/d3/index.html
+++ b/public/d3/index.html
@@ -12,8 +12,8 @@
         <link rel="stylesheet" href="css/main.css">
 
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <script src="libraries/jquery-3.3.1.min.js"></script>
         
-
 
         <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
         <script language="javascript" src="libraries/p5.dom.js"></script>
@@ -125,11 +125,11 @@
 
 
 
-                    <footer>
+<!--                     <footer>
                         <h3>Credits</h3>
                         <p>Common was made by aliens on earth.</p>
                     </footer>
-                </article>
+                </article> -->
 
                 <!-- <aside>
                     <h3>aside</h3>
@@ -145,20 +145,20 @@
             </footer>
         </div>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<!--         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-
+ -->
         <script src="js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
+ <!--        <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
             e.src='//www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
+        </script> -->
     </body>
 </html>
 
