--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -78,7 +78,7 @@
 
                     <!-- question - why does this need to be way down here? (when I move it to the top d3 breaks)  -->
                     <script src="https://d3js.org/d3.v4.min.js"></script>
-                    <script src="d3.js"></script>
+                    <script src="commonplay.js"></script>
                     <script type='text/javascript' src='d3fire.min.js'></script>
 
         <!--[if lt IE 8]>
