--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -18,7 +18,7 @@
         <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
         <script language="javascript" src="libraries/p5.dom.js"></script>
         <script src="https://www.gstatic.com/firebasejs/3.6.3/firebase.js"></script>
-        <script language="javascript" type="text/javascript" src="sketch.js"></script>
+        <script language="javascript" type="text/javascript" src="js/sketch.js"></script>
 
 
     </head>
@@ -78,7 +78,7 @@
 
                     <!-- question - why does this need to be way down here? (when I move it to the top d3 breaks)  -->
                     <script src="https://d3js.org/d3.v4.min.js"></script>
-                    <script src="commonplay.js"></script>
+                    <script src="js/commonplay.js"></script>
                     <script type='text/javascript' src='d3fire.min.js'></script>
 
         <!--[if lt IE 8]>
