added a new d3 example

--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -16,7 +16,10 @@
         <script language="javascript" src="libraries/p5.dom.js"></script>
         <script src="https://www.gstatic.com/firebasejs/3.6.3/firebase.js"></script>
         <script language="javascript" type="text/javascript" src="js/sketch.js"></script>
-        <script src="https://d3js.org/d3.v4.min.js"></script>
+        <script src="https://d3js.org/d3.v3.min.js"></script>
+        <!-- <link rel="json" href="readme.json"> -->
+
+
 
     </head>
 
@@ -98,6 +101,9 @@
                   </p>
 
 
+
+
+
 <!--                     <footer>
                         <h3>Credits</h3>
                         <p>Common was made by aliens on earth.</p>
@@ -108,6 +114,9 @@
                     <h3>aside</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices.</p>
                 </aside> -->
+
+
+
 
             </div> <!-- #main -->
         </div> <!-- #main-container -->
@@ -135,6 +144,9 @@
 
         <!-- define all the html and then define interactivity -->
         <script src="js/commonplay.js"></script>
+
+        <!-- the other tutorial -->
+        <script src="js/force.js"></script>
 
 
     </body>
