--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -18,9 +18,6 @@
         <script language="javascript" type="text/javascript" src="js/sketch.js"></script>
         <script src="https://d3js.org/d3.v3.min.js"></script>
         <!-- <link rel="json" href="readme.json"> -->
-
-
-
     </head>
 
     <body>
@@ -29,7 +26,6 @@
             <header class="wrapper clearfix">
                 <h1 class="title">Common</h1>
                 <nav>
-
                             <!-- Trigger/Open The Modal -->
                             <button id="aboutBtn">About</button>
                             <div id="aboutModal" class="modal">
@@ -39,7 +35,6 @@
                                 <p>Common is a game for communities</p>
                               </div>
                             </div>
-
 
                             <button id="joinBtn">Join</button>
                             <div id="joinModal" class="modal">
@@ -56,11 +51,9 @@
                                 <p>Change your settings here</p>
                               </div>
                             </div>
-
                 </nav>
             </header>
         </div>
-
         <div class="main-container">
             <div class="main wrapper clearfix">
 
@@ -74,12 +67,15 @@
                         <p>Click <a href="https://twitter.com/hashtag/commonplay?src=hash " target="_blank">here</a> to find an active player</p>
                     </section>
 
+
                     <svg width="400" height="200"></svg>
 
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
+                  <p>1--- TEST SECTION --------</p>
+                  <p>Add a node to the network [nonfuctional]</p>
                   <form>
                     Node name:<br>
                     <input type="text" name="name"><br>
@@ -93,11 +89,23 @@
                     <button type="button" id="edge-submit">submit</button>
                   </form> -->
 
-                          <div id="game">
+                  <p>2---- TEST SECTION ------</p>
+                  <p>Get points by clicking, then send your info to the server [fuctional]</p>
+                  <div id="game">
                   </div>
                   <p>
                     <ol id="scorelist">
                     </ol>
+                  </p>
+
+                  <!-- add and remove players -->
+                  <p>3---- TEST SECTION -------</p>
+                  <p>Test buttons to add and remove players [nonfunctional]</p>
+                  <p>
+                    <div class="menu">
+                      <button onclick="addPlayer();">Add player</button>
+                      <button onclick="removePlayer();">Remove player</button>
+                    </div>
                   </p>
 
 
