clarify header fields and a little cleanup

--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -25,37 +25,37 @@
             <header class="wrapper clearfix">
                 <h1 class="title">Common</h1>
                 <nav>
-                            <!-- Trigger/Open The Modal -->
-                            <button id="aboutBtn">About</button>
-                            <div id="aboutModal" class="modal">
-                              <!-- Modal content -->
-                              <div class="modal-content">
-                                <span class="close">&times;</span>
-                                <p>Common is a game for communities</p>
-                              </div>
-                            </div>
+                  <!-- Trigger/Open The Modal -->
+                  <button id="aboutBtn">About</button>
+                  <div id="aboutModal" class="modal">
+                    <!-- Modal content -->
+                    <div class="modal-content">
+                      <span class="close">&times;</span>
+                      <p>Common is a game for communities</p>
+                    </div>
+                  </div>
 
-                            <button id="joinBtn">Join</button>
-                            <div id="joinModal" class="modal">
-                              <div class="modal-content">
-                                <span class="close">&times;</span>
-                                <p>To join, please click here</p>
-                              </div>
-                            </div>
+                  <button id="joinBtn">Join</button>
+                  <div id="joinModal" class="modal">
+                    <div class="modal-content">
+                      <span class="close">&times;</span>
+                      <p>To join, please click here</p>
+                    </div>
+                  </div>
 
-                            <button id="settingsBtn">Settings</button>
-                            <div id="settingsModal" class="modal">
-                              <div class="modal-content">
-                                <span class="close">&times;</span>
-                                <p>Change your settings here</p>
-                              </div>
-                            </div>
+                  <button id="settingsBtn">Settings</button>
+                  <div id="settingsModal" class="modal">
+                    <div class="modal-content">
+                      <span class="close">&times;</span>
+                      <p>Change your settings here</p>
+                    </div>
+                  </div>
                 </nav>
             </header>
         </div>
+
         <div class="main-container">
             <div class="main wrapper clearfix">
-
                 <article>
                     <header>
                         <h1>Welcome to Common</h1>
@@ -66,52 +66,40 @@
                         <p>Click <a href="https://twitter.com/hashtag/commonplay?src=hash " target="_blank">here</a> to find an active player</p>
                     </section>
 
-
                     <svg width="300" height="300"></svg>
 
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+                    <!--[if lt IE 8]>
+                        <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+                    <![endif]-->
 
-                  <p>1--- TEST SECTION --------</p>
-                  <p>Add a node to the network [nonfuctional]</p>
-                  <form>
-                    Friend name:<br>
-                    <input id="friendInput" type="text" name="friend"><br>
-                    Node name:<br>
-                    <input id="nameInput" type="text" name="name"><br>
-                    <button type="button" id="node-submit">submit</button>
-                  </form>
+                    <p>1--- TEST SECTION --------</p>
+                    <p>Add a new player to Common</p>
+                    <form>
+                      Current Active Player Name:<br>
+                      <input id="friendInput" type="text" name="friend"><br>
+                      New Player Name:<br>
+                      <input id="nameInput" type="text" name="name"><br>
+                      <button type="button" id="node-submit">submit</button>
+                    </form>
 
-                  <!-- <form>
-                    Edge name:<br>
-                    <input type="text" name="from"><br>
-                    <input type="text" name="from"><br>
-                    <button type="button" id="edge-submit">submit</button>
-                  </form> -->
-
-                  <p>2---- TEST SECTION ------</p>
-                  <p>Get points by clicking, then send your info to the server [fuctional]</p>
-                  <div id="game">
-                  </div>
-                  <p>
-                    <ol id="scorelist">
-                    </ol>
-                  </p>
+                    <p>2---- TEST SECTION ------</p>
+                    <p>Get points by clicking, then send your info to the server [fuctional]</p>
+                    <div id="game">
+                    </div>
+                    <p>
+                      <ol id="scorelist">
+                      </ol>
+                    </p>
 
                   <!-- add and remove players -->
-                  <p>3---- TEST SECTION -------</p>
+                  <!-- <p>3---- TEST SECTION -------</p>
                   <p>Test buttons to add and remove players [nonfunctional]</p>
                   <p>
                     <div class="menu">
                       <button onclick="addPlayer();">Add player</button>
                       <button onclick="removePlayer();">Remove player</button>
                     </div>
-                  </p>
-
-
-
-
+                  </p> -->
 
 <!--                     <footer>
                         <h3>Credits</h3>
@@ -123,9 +111,6 @@
                     <h3>aside</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices.</p>
                 </aside> -->
-
-
-
 
             </div> <!-- #main -->
         </div> <!-- #main-container -->
@@ -156,7 +141,6 @@
 
         <!-- the other tutorial -->
         <script src="js/force.js"></script>
-
 
     </body>
 </html>
