Support panning around graph.
Also added a "random" button to easily make big graphs.

--- a/public/abc.html
+++ b/public/abc.html
@@ -4,10 +4,15 @@
   pointer-events: none;
   font: 10px sans-serif;
 }
+body { background-color: gray; }
+svg { background-color: white; }
 </style>
 <body>
- edge from <input id="from" type="text"> to <input id="to" type="text"> <input id="add" type="button" value="add">
- <svg width="960" height="500"></svg>
+ edge from <input id="from" type="text"> to <input id="to" type="text">
+ <input id="add" type="button" value="add">
+ <input id="random" type="button" value="random">
+ <svg width="1000" height="700" viewbox="0 0 1000 700"></svg>
  <script src="https://d3js.org/d3.v4.min.js"></script>
+ <script src="js/underscore-min.js"></script>
  <script src="js/abc.js"></script>
 </body>
