--- a/public/abc.html
+++ b/public/abc.html
@@ -13,7 +13,7 @@ svg { background-color: white; }
  edge from <input id="from" type="text"> to <input id="to" type="text">
  <input id="add" type="button" value="add">
  <input id="random" type="button" value="random"><br>
- <svg width="1000" height="700" viewbox="0 0 1000 700"></svg>
+ <svg  width="1000" height="700" viewox="0 0 1000 700"></svg>
  <script src="https://d3js.org/d3.v4.min.js"></script>
  <script src="js/underscore-min.js"></script>
  <script src="js/abc.js"></script>
