--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -1,120 +1,106 @@
 <!doctype html>
 <html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-        <link rel="stylesheet" href="css/normalize.min.css">
-        <link rel="stylesheet" href="css/main.css">
+<head>
+  <title>Head</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-        <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
-        <script language="javascript" src="libraries/p5.dom.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/3.6.3/firebase.js"></script>
-        <script language="javascript" type="text/javascript" src="js/sketch.js"></script>
-        <!-- <script src="https://d3js.org/d3.v4.min.js"></script> -->
-        <!-- <link rel="json" href="readme.json"> -->
-    </head>
+  <link rel="stylesheet" href="css/normalize.min.css">
+  <link rel="stylesheet" href="css/main.css">
 
-    <body>
-        <div class="header-container">
-            <header class="wrapper clearfix">
-                <h1 class="title">Common</h1>
-                <nav>
-                  <!-- Trigger/Open The Modal -->
-                  <button id="aboutBtn">About</button>
-                  <div id="aboutModal" class="modal">
-                    <!-- Modal content -->
-                    <div class="modal-content">
-                      <span class="close">&times;</span>
-                      <p>Common is a game for communities</p>
-                    </div>
-                  </div>
+  <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+  <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
+  <script language="javascript" src="libraries/p5.dom.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/3.6.3/firebase.js"></script>
+  <script language="javascript" type="text/javascript" src="js/sketch.js"></script>
+  <script src="https://d3js.org/d3.v4.min.js"></script>
+</head>
+<body>
+  <div class="header-container">
+    <header class="wrapper clearfix">
+      <h1 class="title">Common</h1>
+      <nav>
 
-                  <button id="joinBtn">Join</button>
-                  <div id="joinModal" class="modal">
-                    <div class="modal-content">
-                      <span class="close">&times;</span>
-                      <p>To join, please click here</p>
-                    </div>
-                  </div>
-
-                  <button id="settingsBtn">Settings</button>
-                  <div id="settingsModal" class="modal">
-                    <div class="modal-content">
-                      <span class="close">&times;</span>
-                      <p>Change your settings here</p>
-                    </div>
-                  </div>
-                </nav>
-            </header>
+        <button id="aboutBtn">About</button>
+          <div id="aboutModal" class="modal">
+          <div class="modal-content">
+            <span class="close">&times;</span>
+            <p>Common is a game for communities</p>
+          </div>
         </div>
 
-        <div class="main-container">
-            <div class="main wrapper clearfix">
-                <article>
-                    <header>
-                        <h1>Welcome to Common</h1>
-                        <p>A game for communities</p>
-                    </header>
-                    <section>
-                        <h2>To play you must find an active player</h2>
-                        <p>Click <a href="https://twitter.com/hashtag/commonplay?src=hash " target="_blank">here</a> to find an active player</p>
-                    </section>
-
-                    <h1>d3 graph</h1
-                    <p>
-                    # people: <span id="nodecount">0</span><br>
-                    # connections: <span id="edgecount">0</span><br>
-                    edge from <input id="from" type="text"> to <input id="to" type="text">
-                    <input id="add" type="button" value="add">
-                    <input id="random" type="button" value="random"><br>
-                    <svg  width="700" height="500" viewBox="0 0 1000 700"></svg>
-                    <script src="https://d3js.org/d3.v4.min.js"></script>
-                    </p>
-
-                    <p>2---- TEST SECTION ------</p>
-                    <p>Get points by clicking, then send your info to the server [fuctional]</p>
-                    <div id="game">
-                    </div>
-                    <p>
-                      <ol id="scorelist">
-                      </ol>
-                    </p> -->
-
-                    <!-- <footer>
-                        <h3>Credits</h3>
-                        <p>.</p>
-                    </footer> -->
-                <!-- </article> --> -->
-
-                <!-- <aside>
-                    <h3>aside</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices.</p>
-                </aside>
-
-            </div> <!-- #main -->
-        </div> <!-- #main-container
-
-        <div class="footer-container">
-            <footer class="wrapper">
-                <h3>footer</h3>
-            </footer>
+        <button id="joinBtn">Join</button>
+        <div id="joinModal" class="modal">
+          <div class="modal-content">
+            <span class="close">&times;</span>
+            <p>To join, please click here</p>
+          </div>
         </div>
 
-<!--         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <button id="settingsBtn">Settings</button>
+        <div id="settingsModal" class="modal">
+          <div class="modal-content">
+            <span class="close">&times;</span>
+            <p>Change your settings here</p>
+          </div>
+        </div>
+      </nav>
+    </header>
+  </div>
+  <div class="main-container">
+    <div class="main wrapper clearfix">
+      <article>
+        <header>
+          <h1>Welcome to Common</h1>
+          <p>A game for communities</p>
+        </header>
+        <section>
+          <h2>To play you must find an active player</h2>
+          <p>Click <a href="https://twitter.com/hashtag/commonplay?src=hash " target="_blank">here</a> to find an active player</p>
+        </section>
+
+        <h1>d3 graph</h1>
+        <p>
+          # people: <span id="nodecount">0</span><br> # connections: <span id="edgecount">0</span><br> edge from <input id="from" type="text"> to <input id="to" type="text">
+          <input id="add" type="button" value="add">
+          <input id="random" type="button" value="random"><br>
+          <svg id="d3viz" width="700" height="500" viewBox="0 0 1000 700"></svg>
+          <script src="https://d3js.org/d3.v4.min.js"></script>
+        </p>
+
+        <p>2---- TEST SECTION ------</p>
+        <p>Get points by clicking, then send your info to the server [fuctional]</p>
+        <div id="game">
+        </div>
+        <p>
+          <ol id="scorelist">
+          </ol>
+        </p>
+
+        <footer>
+          <!-- <h3>Credits</h3> -->
+          <!-- <p>.</p> -->
+        </footer>
+      </article>
+    </div> <!-- #main -->
+  </div> <!-- #main-container -->
+
+  <div class="footer-container">
+    <footer class="wrapper">
+      <h3>footer</h3>
+    </footer>
+  </div>
+
+  <!--         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
  -->
-        <!-- <script src="js/main.js"></script> -->
-        <script src="js/underscore-min.js"></script>
-        <script src="js/commonplay.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
- <!--        <script>
+  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+  <!--        <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
@@ -123,11 +109,11 @@
             ga('create','UA-XXXXX-X','auto');ga('send','pageview');
         </script> -->
 
-        <!-- define all the html and then define interactivity -->
-        <!-- <script src="js/commonplay.js"></script> -->
+  <!-- define all the html and then define interactivity -->
+  <script src="js/underscore-min.js"></script>
+  <script src="js/commonplay.js"></script>
+  <script src="js/main.js"></script>
 
-        <!-- the other tutorial -->
-        <!-- <script src="js/force.js"></script> -->
 
-    </body>
+</body>
 </html>
