--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -4,7 +4,7 @@
 <head>
   <title>Head</title>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> -->
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -76,10 +76,9 @@
         <p>Get points by clicking, then send your info to the server [fuctional]</p>
         <div id="game">
         </div>
-        <p>
+        <!-- removed the p tags because of an error but why? -->
           <ol id="scorelist">
           </ol>
-        </p>
 
         <footer>
           <!-- <h3>Credits</h3> -->
