removed one horrible semicolon and some minor cleanup

--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -23,9 +23,9 @@
   <div class="header-container">
     <header class="wrapper clearfix">
       <h1 class="title">Common</h1>
-      <nav>
+      <nav class>
 
-        <button id="aboutBtn">About</button>
+        <button id="aboutBtn" >About</button>
           <div id="aboutModal" class="modal">
           <div class="modal-content">
             <span class="close">&times;</span>
