added some buttons for later

--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="">
 
 <head>
-  <title>Head</title>
+  <title>Common</title>
   <meta charset="utf-8">
   <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> -->
   <meta name="description" content="">
@@ -65,10 +65,16 @@
 
         <h1>d3 graph</h1>
         <p>
+          <!-- <div class="buttons">
+            <button data-zoom="+1">Zoom In</button>
+            <button data-zoom="-1">Zoom Out</button>
+            <button>Reset</button>
+          </div> -->
+
           # people: <span id="nodecount">0</span><br> # connections: <span id="edgecount">0</span><br> edge from <input id="from" type="text"> to <input id="to" type="text">
           <input id="add" type="button" value="add">
           <input id="random" type="button" value="random"><br>
-          <svg id="d3viz" width="700" height="500" viewBox="0 0 1000 700"></svg>
+          <svg id="d3viz" width="500" height="300" viewBox="0 0 500 300"></svg>
           <script src="https://d3js.org/d3.v4.min.js"></script>
         </p>
 
