--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -74,6 +74,8 @@
           # people: <span id="nodecount">0</span><br> # connections: <span id="edgecount">0</span><br> edge from <input id="from" type="text"> to <input id="to" type="text">
           <input id="add" type="button" value="add">
           <input id="random" type="button" value="random"><br>
+          <input id="destroy" type="button" value="destroy"><br>
+          score for i: <span id="iscore">0</span><br>
           <svg id="d3viz" width="500" height="300" viewBox="0 0 500 300"></svg>
           <script src="https://d3js.org/d3.v4.min.js"></script>
         </p>
