remove styling and update text

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>common</title>
+    <title>Common</title>
+    <link rel="stylesheet" href="css/main.css">
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/4.12.1/firebase-app.js"></script>
@@ -15,7 +16,7 @@
     <!-- initialize the SDK after all desired features are loaded -->
     <script defer src="/__/firebase/init.js"></script>
 
-    <style media="screen">
+    <!-- <style media="screen">
       body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
       #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
       #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
@@ -28,11 +29,12 @@
         body, #message { margin-top: 0; background: white; box-shadow: none; }
         body { border-top: 16px solid #ffa100; }
       }
-    </style>
+    </style> -->
   </head>
   <body>
     <div id="message">
-      <h2>Welcome</h2>
+      <h2>Welcome to Common: A play experience for communities </h2>
+      <p>Begins June 2, 2018</p>
       <p id="auth-msg"></p>
       <p><a href="#" id="logout">logout</a></p>
     </div>
