--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> -->
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
   <link rel="stylesheet" href="css/normalize.min.css">
@@ -76,7 +76,7 @@
           <input id="random" type="button" value="random"><br>
           <input id="destroy" type="button" value="destroy"><br>
           score for i: <span id="iscore">0</span><br>
-          <svg id="d3viz" width="500" height="300" viewBox="0 0 500 300"></svg>
+          <svg id="d3viz" width="500" height="300"></svg>
           <script src="https://d3js.org/d3.v4.min.js"></script>
         </p>
 
