show network scores

--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -75,6 +75,8 @@
           <input id="random" type="button" value="random"><br>
           <input id="destroy" type="button" value="destroy"><br>
           score for i: <span id="iscore">0</span><br>
+          network score: <br>
+          <ul id="network-score"></ul><br>
           <svg id="d3viz" width="500" height="300">
             <circle fill="#7f7f7f" r="12" cx="450" cy="20" id="zoom-in"></circle>
 <text x="450" y="20" text-anchor="middle" style="fill: rgb(0, 0, 0); stroke: rgb(0, 0, 0);">+</text>
