create Giver and personal node score

--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -73,8 +73,11 @@
           # people: <span id="nodecount">0</span><br> # connections: <span id="edgecount">0</span><br> edge from <input id="from" type="text"> to <input id="to" type="text">
           <input id="add" type="button" value="add">
           <input id="random" type="button" value="random"><br>
-          <input id="destroy" type="button" value="destroy"><br>
-          score for i: <span id="iscore">0</span><br>
+          <input id="destroy" type="button" value="destroyer">
+          <input id="giver" type="button" value="giver"><br>
+
+          network score for i: <span id="iscore">0</span><br>
+          node score for i: <span id="node-score-i">0</span><br>
           network score: <br>
           <ul id="network-score"></ul><br>
           <svg id="d3viz" width="500" height="300">
