Rendered the node score

--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -77,7 +77,7 @@
           <input id="giver" type="button" value="giver"><br>
 
           network score for i: <span id="iscore">0</span><br>
-          node score for i: <span id="node-score-i">0</span><br>
+          node score for i: <span id="node-score-me">0</span><br>
           network score: <br>
           <ul id="network-score"></ul><br>
           <svg id="d3viz" width="500" height="300">
